--- a/house-app/src/pages/house.css
+++ b/house-app/src/pages/house.css
@@ -1,15 +1,3 @@
-:root {
-  --color-primary: #002246;
-  --color-secondary: #062f59;
-  --color-button-primary: #ff6910;
-  --color-button-secondary: #d65000;
-  --color-button2-primary: #486686;
-  --color-button2-secondary: #355170;
-  --color-text: #fff;
-  --color-text-secondary: #333;
-  --font-family: "Inter", sans-serif;
-}
-
 .house-page {
   display: flex;
   height: 100vh;
@@ -116,10 +104,16 @@
 }
 
 .nav-arrow {
+  background: none;
+  outline: none;
+  border: none;
   width: 18px;
   height: 18px;
   color: var(--color-text);
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card-title {
