--- a/house-app/src/pages/house.css
+++ b/house-app/src/pages/house.css
@@ -93,6 +93,7 @@
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.85);
   width: 100%;
   max-width: 320px;
+  min-height: 360px;
 }
 
 .card-header {
