--- a/house-app/src/pages/construction.css
+++ b/house-app/src/pages/construction.css
@@ -137,6 +137,7 @@
   font-weight: 700;
   color: var(--color-text);
   flex: 1;
+  text-align: left;
 }
 
 .solution-indicators {
@@ -153,6 +154,7 @@
   font-size: 12px;
   font-weight: 700;
   color: var(--color-text);
+  min-width: 75px;
 }
 
 .money-icon,
