--- a/house-app/src/pages/house.css
+++ b/house-app/src/pages/house.css
@@ -95,6 +95,15 @@
   width: 100%;
   max-width: 320px;
   min-height: 360px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.controls-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .card-header {
