--- a/house-app/src/pages/comparison.css
+++ b/house-app/src/pages/comparison.css
@@ -77,7 +77,7 @@
   margin: 0;
 }
 
-.house-display {
+.house-display-comparison {
   display: flex;
   justify-content: center;
   align-items: center;
