--- a/house-app/src/pages/construction.css
+++ b/house-app/src/pages/construction.css
@@ -37,9 +37,11 @@
   border: 2px solid var(--color-button2-secondary);
   border-radius: 100px;
   padding: 10px 16px;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 700;
   color: var(--color-text);
+  min-width: 65px;
+  margin: 10px;
 }
 
 .completion-card {
