--- a/house-app/src/pages/house.css
+++ b/house-app/src/pages/house.css
@@ -99,6 +99,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-left: 32px;
+  margin-right: 32px;
 }
 
 .controls-content {
