стиль сравнение белый текст

--- a/house-app/src/pages/comparison.css
+++ b/house-app/src/pages/comparison.css
@@ -130,7 +130,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  color: var(--color-text-02);
+  color: black;
 }
 
 .comparison-divider {
